2005-05-04  Ross Burton  <ross@burtonini.com>

	* src/xutils.c:
	* src/xutils.h:
	Add copy-and-paste implementations of the private functions
	_wnck_get_string_property_latin1() and _wnck_window_get_xscreen().
	
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-matcher-windowname.gob:
	Update to use above API calls.  Now works on GNOME 2.10! Many
	thanks to Crispin Flowerday <gnome@flowerday.cx> for the patch.

2005-05-02  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-opacity.gob:
	Add minimum and maximum value hints, and fix formatiing.

2005-04-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.9.

2005-04-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for wnck >= 2.9.92, as they need timestamps.

	* src/devilspie-action-resize.gob:
	If wnck >= 2.9.92, pass a timestamp when minimising.

2005-04-08  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Add xutils.c to the doc-generator build.

2005-03-08  Ross Burton  <ross@burtonini.com>

	* src/xutils.[ch]:
	Copy and paste some private functions from wnck.
	
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-action-opacity.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-matcher-windowname.gob:
	Port to use xutils.c.	
	
2005-03-08  Ross Burton  <ross@burtonini.com>

	* src/config-parser.c:
	Handle double property types.

2005-02-03  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-exec.gob:
	* src/devilspie-action-hide.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-action-opacity.gob:
	* src/devilspie-action-resize.gob:
	* src/devilspie-action-setgeometry.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-action-setworkspace.gob:
	* src/devilspie-matcher-windowname.gob: